--- a/.github/workflows/deployment2.yml
+++ b/.github/workflows/deployment2.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
-      - name: Test code
-        run: npm run test
+      # - name: Test code
+      #   run: npm run test
 
   deploy:
     needs: test
