--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,6 +10,8 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
+      - name: Test code
+        run: npm run test
       - name: Build code
         run: npm run build
       - name: Deplot code
