--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run build
       - name: Publish JS filename
         id: publish
-        run: find dist/assets/*.js -type f -exedir echo 'script-file={}' >> $GITHUB_OUTPUT ';' # from the outputs
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';' # from the outputs
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
