--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -5,7 +5,7 @@ on:
       - main
   workflow_dispatch:
 env:
-  MONGO_DB_NAME: gha-demo
+  MONGODB_DB_NAME: gha-demo
 jobs:
   test:
     env:
@@ -26,6 +26,8 @@ jobs:
         run: npm ci
       - name: Lint code
         run: npm run lint
+      # - name: Run server
+      #   run: npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Output information
         run: |
           echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
