--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -10,8 +10,10 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.15pwqcc.mongodb.net # sample data, its not a good practice to put here the important info
-      MONGODB_USERNAME: maximilian # sample data, its not a good practice to put here the important info
-      MONGODB_PASSWORD: X34Mqtpg10D8RGTi # sample data, its not a good practice to put here the important info
+      # MONGODB_USERNAME: maximilian # sample data, its not a good practice to put here the important info
+      # MONGODB_PASSWORD: X34Mqtpg10D8RGTi # sample data, its not a good practice to put here the important info
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080 # sample data
     runs-on: ubuntu-latest
     steps:
