--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -5,7 +5,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12, 14, 16, 20, 21]
-        operation-system: [ubuntu-latest, windows-latest]
+        operating-system: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.operating-system }}
     steps:
     - name: Get code
